ingress/insight-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-insight-ingress
  namespace: redis
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: redis-insight-basicauth
    kubernetes.io/ingress.class: kong
spec:
  ingressClassName: kong
  rules:
    - host: redis-insight.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redisinsight
                port:
                  number: 5540
